--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Photography_first"></activity>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".RequestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DeleteActivity" />
+        <activity android:name=".UpdateActivity" />
+        <activity android:name=".AddActivity" />
+        <activity android:name=".DetailsActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".QuoteActivity" />
+        <activity android:name=".PackageActivity" />
+        <activity android:name=".Photography_first" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
