--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminPhotographyAdd"></activity>
+        <activity android:name=".ExtendPhotography"></activity>
+        <activity android:name=".PhotographyBooking" />
+        <activity android:name=".AdminPhotographyAdd" />
         <activity android:name=".AdminPhotographyUpdate" />
         <activity android:name=".AdminPhotographyManagemnt" />
         <activity android:name=".Payment" />
