Updated nav and splash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExtendPhotography"></activity>
+        <activity android:name=".SplashSreen"></activity>
+        <activity android:name=".ExtendPhotography" />
         <activity android:name=".PhotographyBooking" />
-        <activity android:name=".AdminPhotographyAdd" />
-        <activity android:name=".AdminPhotographyUpdate" />
-        <activity android:name=".AdminPhotographyManagemnt" />
         <activity android:name=".Payment" />
         <activity android:name=".Photography_second" />
-        <activity android:name=".Photography_first" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
