--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dogpaw">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -16,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".Payment2"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -29,23 +28,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".DriversMapActivity"
-            android:label="@string/title_activity_drivers_map"></activity>
-        <activity
-            android:name=".CustomersMapActivity"
-            android:label="@string/title_activity_customers_map" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".DriverLoginRegisterActivity" />
-        <activity android:name=".CustomerLoginRegisterActivity" />
-
-        <activity android:name=".WelcomeActivity" />
-        <activity android:name=".Photography_first" />
-        <activity android:name=".SplashSreen"></activity>
-        <activity android:name=".ExtendPhotography" />
-        <activity android:name=".PhotographyBooking" />
-        <activity android:name=".Payment" />
-        <activity android:name=".Photography_second" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,6 +35,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ExtendPhotography" />
+        <activity android:name=".PhotographyBooking" />
+        <activity android:name=".Payment" />
+        <activity android:name=".Photography_second" />
+        <activity
+            android:name=".DriversMapActivity"
+            android:label="@string/title_activity_drivers_map" />
+        <activity
+            android:name=".CustomersMapActivity"
+            android:label="@string/title_activity_customers_map" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".DriverLoginRegisterActivity" />
+        <activity android:name=".CustomerLoginRegisterActivity" />
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".MA5" />
+        <activity android:name=".MA1" />
+        <activity android:name=".MA6" />
+        <activity android:name=".RequestActivity" />
+        <activity android:name=".DetailsActivity" />
+        <activity android:name=".QuoteActivity" />
     </application>
 
 </manifest>
